migrate: delete column status

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,1 +1,5 @@
+PORT=8080
 DATABASE_URL=postgresql://postgres:root@localhost:5431/image_gen_db
+
+SPACELY_API_URL=https://api.spacely.ai/api/v1/
+AI_API_KEY=
