--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,34 @@ services:
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - image-ly
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: DockerFile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    networks:
+      - image-ly
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: DockerFile
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    networks:
+      - image-ly
 
 volumes:
   postgres_data:
+
+networks:
+  image-ly:
+    driver: bridge
