--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 PORT=8080
-WHITE_LISTED_ORIGINS=http://localhost:3000
+WHITE_LISTED_ORIGINS=http://localhost:3000,http://frontend:3000
+#DATABASE_URL=postgresql://postgres:root@db:5432/image_gen_db
 DATABASE_URL=postgresql://postgres:root@localhost:5431/image_gen_db
 
-SPACELY_API_URL=https://api.spacely.ai/api/v1/
+SPACELY_API_URL=https://api.spacely.ai/api/v1
 AI_API_KEY=
