--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,8 @@
 PORT=8080
 WHITE_LISTED_ORIGINS=http://localhost:3000,http://frontend:3000
-#DATABASE_URL=postgresql://postgres:root@db:5432/image_gen_db
-DATABASE_URL=postgresql://postgres:root@localhost:5431/image_gen_db
+
+DATABASE_URL=postgresql://postgres:root@db:5432/image_gen_db
+#DATABASE_URL=postgresql://postgres:root@localhost:5431/image_gen_db
 
 SPACELY_API_URL=https://api.spacely.ai/api/v1
-AI_API_KEY=
+AI_API_KEY=sk-F1XvBTmLp_d1Enq8O7NsthUg5ww
