--- a/backend/DockerFile
+++ b/backend/DockerFile
@@ -1,23 +1,23 @@
+# Use the official Node.js image as the base image
 FROM node:24-alpine AS builder
 
-WORKDIR /app
+# Set the working directory inside the container
+WORKDIR /usr/src/app
 
+# Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
-RUN npm install --frozen-lockfile
 
+# Install the application dependencies
+RUN npm install
+
+# Copy the rest of the application files
 COPY . .
 
+# Build the NestJS application
 RUN npm run build
 
-
-FROM node:24-alpine AS runner
-
-WORKDIR /app
-
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./package.json
-
+# Expose the application port
 EXPOSE 8080
 
+# Command to run the application
 CMD ["node", "dist/main"]
